--- a/Front-end/assets/css/messages.css
+++ b/Front-end/assets/css/messages.css
@@ -538,3 +538,107 @@
     padding: 0.2rem 0.5rem;
   }
 }
+
+/*!* Call Container *!*/
+/*#call-container {*/
+/*  position: fixed;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  background: rgba(0, 0, 0, 0.9);*/
+/*  z-index: 2000;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*}*/
+
+/*.call-header {*/
+/*  padding: 1rem;*/
+/*  background: rgba(255, 255, 255, 0.1);*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
+/*  align-items: center;*/
+/*  color: white;*/
+/*}*/
+
+/*.video-container {*/
+/*  flex: 1;*/
+/*  position: relative;*/
+/*  background: #000;*/
+/*}*/
+
+/*#remote-video-container {*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*}*/
+
+/*#local-video-container {*/
+/*  position: absolute;*/
+/*  width: 200px;*/
+/*  height: 150px;*/
+/*  bottom: 20px;*/
+/*  right: 20px;*/
+/*  border-radius: 8px;*/
+/*  overflow: hidden;*/
+/*  border: 2px solid white;*/
+/*}*/
+
+/*.audio-call-container {*/
+/*  flex: 1;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*  color: white;*/
+/*}*/
+
+/*.user-avatar {*/
+/*  width: 120px;*/
+/*  height: 120px;*/
+/*  border-radius: 50%;*/
+/*  overflow: hidden;*/
+/*  margin-bottom: 1rem;*/
+/*}*/
+
+/*.user-avatar img {*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  object-fit: cover;*/
+/*}*/
+
+/*!* Call Notification *!*/
+/*.call-notification {*/
+/*  position: fixed;*/
+/*  top: 50%;*/
+/*  left: 50%;*/
+/*  transform: translate(-50%, -50%);*/
+/*  background: white;*/
+/*  padding: 2rem;*/
+/*  border-radius: 12px;*/
+/*  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);*/
+/*  z-index: 2001;*/
+/*  text-align: center;*/
+/*}*/
+
+/*.call-notification .user-avatar {*/
+/*  width: 80px;*/
+/*  height: 80px;*/
+/*  margin: 0 auto 1rem;*/
+/*}*/
+
+/*.call-actions {*/
+/*  display: flex;*/
+/*  gap: 1rem;*/
+/*  margin-top: 1.5rem;*/
+/*  justify-content: center;*/
+/*}*/
+
+/*.call-actions .btn {*/
+/*  width: 50px;*/
+/*  height: 50px;*/
+/*  border-radius: 50%;*/
+/*  display: flex;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*  font-size: 1.25rem;*/
+/*}*/
